fix: layout spacing for renovatin, index, plumbing page. bg changes in renovation and plumbing page. layout fixes in homepage

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -203,6 +203,23 @@
 //     }
 // }
 
+.home-services{
+  .card {
+
+    &__title{
+      font-size: clamp(0.875rem,3dvw,1.125rem);
+
+      @media(max-width: 768px)
+      {
+        text-align: left
+
+        
+      }
+    }
+  }
+
+}
+
 /*-- -------------------------- -->
 <---    Side By Side Reverse    -->
 <--- -------------------------- -*/
