--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1494,6 +1494,11 @@
 @media only screen and (min-width: 48rem) {
 	#cs-footer-275 {
 		margin-bottom: 0;
+
+    .footer-container {
+      padding-inline: 2rem;
+    }
+
 		.cs-container {
 			max-width: (1280/16rem);
 			row-gap: 0;
